Avoid unnecessary scrolling on iphones

--- a/projects/srm/src/app/main/main.component.less
+++ b/projects/srm/src/app/main/main.component.less
@@ -9,6 +9,7 @@
         flex-flow: column;
         justify-content: stretch;    
         position: relative;
+        overflow: hidden;
 
         .header {
             position: relative;
